// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="large"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large view should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="large"
    testid="123"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
    layout="large"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large view should support description attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="large"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
      <span
        class="bpk-text bpk-text--sm bpk-price__description bpk-price__descriptionSpacing"
      >
        / night
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large view should support subtitle attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="large"
  >
    <span
      class="bpk-text bpk-text--sm bpk-price__subtitle"
    >
      £200
    </span>
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="small"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small view should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="small"
    testid="123"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
    layout="small"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small view should support description attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="small"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
      <span
        class="bpk-text bpk-text--sm bpk-price__description bpk-price__descriptionSpacing"
      >
        / night
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small view should support subtitle attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    layout="small"
  >
    <span
      class="bpk-text bpk-text--sm bpk-price__subtitle"
    >
      £200
    </span>
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;
